--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
         <img src="Gemini_Generated_Image_htymsxhtymsxhtym.png" alt="The Almighty" class="god-logo" onclick="revealSystem()">
         
         <!-- The Subtitle Link -->
-        <a href="https://twitter.com/RecruitPass" target="_blank" class="subtitle">
+        <a href="https://x.com/i/communities/1994137527935197436/" target="_blank" class="subtitle">
             Follow the Path
         </a>
     </div>
@@ -243,4 +243,5 @@
     </script>
 
 </body>
+
 </html>
